<resources>
    <string name="app_name">YourTime</string>
    <string name="hi">HI !!!</string>
    <string name="day_la_ten">Day la ten</string>
    <string name="day_la_email">Day la email</string>
    <string name="log_out">Log Out</string>
    <string name="report">Report</string>
    <string name="set_time">Set Time</string>
    <string name="setting">Setting</string>
    <string name="date_time">3 December, 2018</string>
    <string name="events_created">Created Events</string>
    <string name="create_new_event">Create New Event</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="note">Note</string>
    <string name="create">CREATE</string>
    <string name="_3_october_2018">3 October 2018</string>
    <string name="schedule">schedule</string>
    <string name="error">ERROR</string>
    <string name="please_complete_all_information">Please complete all information</string>
    <string name="ok">OK</string>
    <string name="time_is_not_suitable">Time is not suitable</string>
    <string name="successfully_written">Successfully written!</string>
    <string name="error_writing_data">Error writing data</string>
    <string name="_23_30">23:30</string>
    <string name="hyphen">-</string>
    <string name="_23_45">23:45</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="no_schedule">No Schedule</string>
    <string name="not_ready">Not Ready</string>
    <string name="day_la_ghi_chu">Day la ghi chu</string>
    <string name="edit">Edit</string>
    <string name="are_you_sure">Are you sure you want to delete this schedule?</string>
    <string name="are_you_sure_exit">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="_00_53">00:53</string>
    <string name="status_success_written">Successfully written!</string>
    <string name="status_error_write">Error writing data</string>
    <string name="status_success_update">Successfully updated!</string>
    <string name="status_error_update">Error updating data</string>
    <string name="status_success_delete">Successfully deleted!</string>
    <string name="status_error_delete">Error deleting data</string>
    <string name="_00_00">00:00</string>
    <string name="note_alarm">C# Android IOS Javacript React-native</string>
    <string name="_17_30">17:30</string>
    <string name="_5_october_2018">5 October 2018</string>
    <string name="exit">Exit</string>
    <string name="go_back">Go back</string>
    <string name="of_the_day">OF THE DAY</string>
    <string name="the_last_seven_days">THE LAST SEVEN DAYS</string>
</resources>
