<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_20sdp"
    android:background="@drawable/background_custom_notif">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:background="@drawable/background_custom_header"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:id="@+id/txtDateDialog"
            android:layout_width="wrap_content"
            android:textColor="@color/material_white"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/_3_october_2018"
            android:textSize="@dimen/_23sdp"
            android:textStyle="bold" />
        </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:id="@+id/scrollView"
        android:layout_marginTop="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/linearStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_time"
                        android:textColor="@color/material_dim_text"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_start_time" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_00_00"
                            android:id="@+id/txtTimeStart"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/note"
                    android:textColor="@color/material_dim_text"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:id="@+id/edNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_below="@id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/custom_button_ok"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ok"
            android:textColor="#ffffffff" />
        <Button
            android:id="@+id/btnCancelCreate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/custom_button_ok"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cancel"
            android:textColor="#ffffffff" />
    </LinearLayout>
</RelativeLayout>