<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardViewSchedule"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_2sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtStartSchedule"
                android:text="@string/_23_30"
                android:textSize="@dimen/_23ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtStartSchedule"
                android:text="@string/hyphen"
                android:id="@+id/txtHyphen"
                android:textSize="@dimen/_23ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_23_45"
                android:id="@+id/txtEndSchedule"
                android:layout_toEndOf="@id/txtHyphen"
                android:textSize="@dimen/_23ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtNoteSchedule"
                android:layout_below="@id/txtStartSchedule"
                android:text="Day la ghi chu"
                android:textSize="@dimen/_12ssp"
                android:layout_marginBottom="@dimen/_10sdp"/>
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_option"
                android:layout_alignParentEnd="true"
                android:id="@+id/imgOptionSchedule"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>