<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_custom"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_custom_err">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_dialog_delete" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/txtNotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:maxLines="10"
            android:text="@string/are_you_sure"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/txtNotif"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button_error"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/ok"
                android:textColor="#ffffffff" />
            <Button
                android:id="@+id/btnCancel"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_toEndOf="@id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button_ok"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/cancel"
                android:textColor="#ffffffff" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>