<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                android:text="@string/start_time"/>
            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imgStartTime"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_start_time"/>
                    <TextView
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_15ssp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20:34" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                android:text="@string/end_time"/>
            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imgEndTime"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_stop_time"/>
                    <TextView
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_15ssp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="22:34" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtNote"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_below="@id/linearLayout" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        android:id="@+id/edNote"
        android:layout_below="@id/txtNote"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edNote"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/linearCreate">
        <ImageView
            android:src="@drawable/ic_ok"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="@color/color_create"/>
    </LinearLayout>
</RelativeLayout>